# cmake-swig-vcpkg-vulkan

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.adoc  lib.hpp  lib.i  main.cpp  vcpkg.json
